[metadata]
name = ansible-role-tripleo-tempest
summary = ansible-role-tripleo-tempest - Ansible tempest role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = jillr@redhat.com
home-page = https://opendev.org/openstack/ansible-role-tripleo-tempest
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-tempest/defaults = defaults/*
    share/ansible/roles/tripleo-tempest/meta = meta/*
    share/ansible/roles/tripleo-tempest/tasks = tasks/*
    share/ansible/roles/tripleo-tempest/templates = templates/*
    share/ansible/roles/tripleo-tempest/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

